--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "thapabishwa"
 avatar = "https://github.com/thapabishwa.png"
 pygmentsCodeFences = true
 pygmentsUseClasses = true
-Paginate = 20
+pagination.pagerSize = 20
 
 [taxonomies]
 tag = "tags"
